--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,4 +2,10 @@ set(ServerProject fs_server)
 
 add_executable(${ServerProject} main.cpp)
 
-target_link_libraries(${ServerProject} PRIVATE ${ProtoGen})
+target_include_directories(${ServerProject} PRIVATE src)
+
+target_sources(${ServerProject} PRIVATE
+    src/FileReciever/Server.cpp
+)
+
+target_link_libraries(${ServerProject} PUBLIC ${CORE_LIB})
