Add simple pytest cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,3 +79,16 @@ set(CORE_LIB
 # Executables
 add_subdirectory(server)
 add_subdirectory(client)
+
+OPTION(TEST "Use pytest cases" OFF) 
+
+if(TEST) 
+    message("Build with tests")
+    enable_testing()
+    find_package(Python COMPONENTS Interpreter REQUIRED)
+
+    add_test(NAME pytests
+        COMMAND ${Python_EXECUTABLE} -m pytest ${CMAKE_CURRENT_SOURCE_DIR}/test/test.py
+    )
+
+endif()
